--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,4 +34,4 @@ jobs:
           BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
           PRIVATE_GROUP_ID: ${{ secrets.PRIVATE_GROUP_ID }}
         run: |
-          python your_script.py
+          python src/bot.py  # Adjust the path if necessary
